@@ -1,5 +1,17 @@
 2002-08-09  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* deprecated/is_bool.m: New file.
+	* deprecated/is_complex.m: New file.
+	* deprecated/is_global.m: New file.
+	* deprecated/is_list.m: New file.
+	* deprecated/is_matrix.m: New file.
+	* deprecated/is_scalar.m: New file.
+	* deprecated/is_square.m: New file.
+	* deprecated/is_stream.m: New file.
+	* deprecated/is_struct.m: New file.
+	* deprecated/is_symmetric.m: New file.
+	* deprecated/is_vector.m: New file.
+
 	* general/isscalar.m: Rename from is_scalar.m.
 	* general/issquare.m: Rename from is_square.m.
 	* general/issymmetric.m: Rename from is_symmetric.m.
